refactor: update logic get player data