@@ -2,9 +2,10 @@ package com.teamobi.mobiarmy2.dao.impl;
 
 import com.google.gson.Gson;
 import com.teamobi.mobiarmy2.dao.IClanMemberDAO;
+import com.teamobi.mobiarmy2.dao.IUserEquipmentDAO;
 import com.teamobi.mobiarmy2.database.HikariCPManager;
 import com.teamobi.mobiarmy2.dto.ClanMemDTO;
-import com.teamobi.mobiarmy2.model.EquipmentChestJson;
+import com.teamobi.mobiarmy2.dto.UserEquipmentDTO;
 import com.teamobi.mobiarmy2.server.EquipmentManager;
 import com.teamobi.mobiarmy2.server.PlayerXpManager;
 import com.teamobi.mobiarmy2.util.GsonUtil;
@@ -18,8 +19,15 @@ import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 public class ClanMemberDAO implements IClanMemberDAO {
+
+    private final IUserEquipmentDAO userEquipmentDAO;
+
+    public ClanMemberDAO(IUserEquipmentDAO userEquipmentDAO) {
+        this.userEquipmentDAO = userEquipmentDAO;
+    }
 
     @Override
     public Byte count(short clanId) {
@@ -44,14 +52,15 @@ public class ClanMemberDAO implements IClanMemberDAO {
              PreparedStatement statement = connection.prepareStatement(
                      "SELECT " +
                              "c.rights, c.clan_point, c.contribute_count, c.contribute_text, c.contribute_time, c.xu, c.luong, " +
-                             "p.player_id, p.is_online, p.cup, p.equipment_chest, " +
-                             "pc.character_id, pc.level, pc.xp, pc.data, " +
-                             "u.username " +
+                             "u.user_id, u.is_online, u.cup, " +
+                             "uc.character_id, uc.level, uc.xp, uc.data, " +
+                             "a.username " +
                              "FROM clan_members c " +
-                             "INNER JOIN players p on c.player_id = p.player_id " +
-                             "INNER JOIN player_characters pc on p.active_character_id = pc.player_character_id " +
-                             "INNER JOIN users u on p.user_id = u.user_id " +
-                             "WHERE p.clan_id = ? " +
+                             "INNER JOIN users u on c.user_id = u.user_id " +
+                             "INNER JOIN user_characters uc on u.user_id = uc.user_id " +
+                             "INNER JOIN accounts a on u.account_id = a.account_id " +
+                             "WHERE c.clan_id = ? " +
+                             "AND uc.is_active = 1 " +
                              "ORDER BY c.rights DESC " +
                              "LIMIT 10 OFFSET ?")) {
             statement.setShort(1, clanId);
@@ -61,18 +70,19 @@ public class ClanMemberDAO implements IClanMemberDAO {
                 byte index = 0;
                 Gson gson = GsonUtil.getInstance();
                 while (resultSet.next()) {
-                    ClanMemDTO entry = new ClanMemDTO();
-                    entry.setPlayerId(resultSet.getInt("player_id"));
+                    ClanMemDTO clanMemDTO = new ClanMemDTO();
+                    clanMemDTO.setUserId(resultSet.getInt("user_id"));
 
                     byte rights = resultSet.getByte("rights");
                     switch (rights) {
-                        case 2 -> entry.setUsername(resultSet.getString("username") + " (Đội trưởng)");
-                        case 1 -> entry.setUsername(resultSet.getString("username") + " (Đội phó %d)".formatted(index));
-                        default -> entry.setUsername(resultSet.getString("username"));
+                        case 2 -> clanMemDTO.setUsername(resultSet.getString("username") + " (Đội trưởng)");
+                        case 1 ->
+                                clanMemDTO.setUsername(resultSet.getString("username") + " (Đội phó %d)".formatted(index));
+                        default -> clanMemDTO.setUsername(resultSet.getString("username"));
                     }
-                    entry.setPoint(resultSet.getInt("clan_point"));
-                    entry.setActiveCharacter(resultSet.getByte("character_id"));
-                    entry.setOnline(resultSet.getByte("is_online"));
+                    clanMemDTO.setPoint(resultSet.getInt("clan_point"));
+                    clanMemDTO.setActiveCharacter(resultSet.getByte("character_id"));
+                    clanMemDTO.setOnline(resultSet.getByte("is_online"));
 
                     int currentLevel = resultSet.getInt("level");
                     int currentXp = resultSet.getInt("xp");
@@ -82,15 +92,15 @@ public class ClanMemberDAO implements IClanMemberDAO {
                     int xpNeededForNextLevel = requiredXpNextLevel - requiredXpCurrentLevel;
                     byte levelPercent = Utils.calculateLevelPercent(currentXpInLevel, xpNeededForNextLevel);
 
-                    entry.setLevel((byte) currentLevel);
-                    entry.setLevelPt(levelPercent);
+                    clanMemDTO.setLevel((byte) currentLevel);
+                    clanMemDTO.setLevelPt(levelPercent);
 
-                    entry.setIndex((byte) ((page * 10) + index));
-                    entry.setCup(resultSet.getInt("cup"));
+                    clanMemDTO.setIndex((byte) ((page * 10) + index));
+                    clanMemDTO.setCup(resultSet.getInt("cup"));
 
                     int[] data = gson.fromJson(resultSet.getString("data"), int[].class);
-                    EquipmentChestJson[] equipmentChests = gson.fromJson(resultSet.getString("equipment_chest"), EquipmentChestJson[].class);
-                    entry.setDataEquip(EquipmentManager.getEquipmentData(equipmentChests, data, entry.getActiveCharacter()));
+                    Map<Integer, UserEquipmentDTO> userEquipmentDTOS = userEquipmentDAO.findAllByIdIn(data);
+                    clanMemDTO.setDataEquip(EquipmentManager.getEquipmentIndexes(userEquipmentDTOS, data, clanMemDTO.getActiveCharacter()));
 
                     short contributeCount = resultSet.getShort("contribute_count");
                     if (contributeCount > 0) {
@@ -102,14 +112,14 @@ public class ClanMemberDAO implements IClanMemberDAO {
 
                         String formattedTime = Utils.getStringTimeBySecond(Duration.between(currentTime, contributionTime).getSeconds());
 
-                        entry.setContributeText(String.format("%s %s trước", contributionText, formattedTime));
-                        entry.setContributeCount("%d lần: %s xu và %s lượng".formatted(contributeCount, Utils.getStringNumber(xuContribution), Utils.getStringNumber(luongContribution)));
+                        clanMemDTO.setContributeText(String.format("%s %s trước", contributionText, formattedTime));
+                        clanMemDTO.setContributeCount("%d lần: %s xu và %s lượng".formatted(contributeCount, Utils.getStringNumber(xuContribution), Utils.getStringNumber(luongContribution)));
                     } else {
-                        entry.setContributeText("Chưa đóng góp");
-                        entry.setContributeCount("");
+                        clanMemDTO.setContributeText("Chưa đóng góp");
+                        clanMemDTO.setContributeCount("");
                     }
 
-                    entries.add(entry);
+                    entries.add(clanMemDTO);
                     index++;
                 }
             }
